--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./styles/light.css" />
     <script src="./scripts/script.js"></script>
   </head>
-  <body class="page">
+  <body class="page theme_dark">
     <header class="header decorated-zone">
       <span class="header__tag" aria-hidden="true">REC</span>
       <nav class="header__theme-menu">
