--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
-    <script src="./scripts/script.js"></script>
+    <script defer src="./scripts/script.js"></script>
   </head>
-  <body class="page theme_dark">
+  <body class="page">
     <header class="header decorated-zone">
       <span class="header__tag" aria-hidden="true">REC</span>
       <nav class="header__theme-menu">
