--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Сложно сосредоточиться</title>
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" sizes="any" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
