--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <article class="article">
               <h3 class="article-subtitle title-decor">Многозадачность</h3>
               <p class="content">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи 
-                <a class="link" href="https://www.sciencedirect.com/science/article/pii/S2772501425000016"target="_blank" rel="noopener noreferrer">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
+                <a class="link" href="https://www.sciencedirect.com/science/article/pii/S2772501425000016" target="_blank" rel="noopener noreferrer">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
             </article>
           </li>
             <li>
@@ -97,11 +97,9 @@
           </ul>
       </section>
       <section class="content_section content__section-row-view">
-        <h2 class="article-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+          <h2 class="article-title how-article-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+          <h3 class="article-subtitle how-article-subtitle title-decor">5 простых (на самом деле не очень) советов</h3>
         <ul class="content__block-list how-article">
-          <li>
-            <h3 class="article-subtitle title-decor">5 простых (на самом деле не очень) советов</h3>
-          </li>
           <li>
             <article class="article">
               <h4 class="list__title title-decor">Представьте небо и облака</h4>
@@ -139,7 +137,7 @@
         </ul>
       </section>
       <section class="content_section gallery">
-        <h3 class="article-subtitle title-decor">А можно в картинках?</h3>
+        <h2 class="article-subtitle title-decor">А можно в картинках?</h2>
         <div class="gallery__items">
           <img class="gallery__image" src="./images/sunset.png" alt="Залив, закатное солнце между гор" loading="lazy">
           <img class="gallery__image" src="./images/ice-cream.png" alt="Миска с мороженым в милом стииле" loading="lazy">
@@ -148,7 +146,6 @@
           <img class="gallery__image" src="./images/street.png" alt="Улица в японском стиле в фиолетовых тонах" loading="lazy">
         </div>
         </section>
-      </section>
     </main>
     <footer class="footer decorated-zone">
       <h1 class="title footer__title">focus</h1>
